dataset1235/2025-2/1153765216/users/2357208246/executions/2747719322_775838323.log
== SUBMISSION (2025-08-19 18:21:30)
-- CODE: 
# agr eu entendi a atividade 
n1 = 5 
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:14:02)
-- CODE: 
x1 = "Ufam
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:15:25)
-- CODE: 
n1 = 5 
n2 = 4
n3 = 3
m = n1 + n2 + n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:21:22)
-- CODE: 
# agr eu entendi a atividade 
n1 = 5 
n2 = 4
n3 = 3
m = (n1 + n2 + n3)/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
